tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_do_not_infer_partial_global_types/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Globals must have a specified type
  ┌─ src/main.nr:4:20
  │
4 │         pub global STR: str<_> = "hi";
  │                    ---           ---- Inferred type is `str<2>`
  │

error: Globals must have a specified type
  ┌─ src/main.nr:6:20
  │
6 │         pub global NESTED_STR: [str<_>] = &["hi"];
  │                    ----------             ------- Inferred type is `[str<2>]`
  │

error: Globals must have a specified type
  ┌─ src/main.nr:8:20
  │
8 │         pub global FMT_STR: fmtstr<_, _> = f"hi {FORMATTED_VALUE}";
  │                    -------                 ----------------------- Inferred type is `fmtstr<20, (str<5>,)>`
  │

error: Globals must have a specified type
  ┌─ src/main.nr:2:20
  │
2 │         pub global ARRAY: [Field; _] = [0; 3];
  │                    -----               ------ Inferred type is `[Field; 3]`
  │

error: Globals must have a specified type
  ┌─ src/main.nr:3:20
  │
3 │         pub global NESTED_ARRAY: [[Field; _]; 3] = [[]; 3];
  │                    ------------                    ------- Inferred type is `[[Field; 0]; 3]`
  │

error: Globals must have a specified type
   ┌─ src/main.nr:9:20
   │
 9 │         pub global TUPLE_WITH_MULTIPLE: ([str<_>], [[Field; _]; 3]) = 
   │                    -------------------
10 │             (&["hi"], [[]; 3]);
   │             ------------------ Inferred type is `([str<2>], [[Field; 0]; 3])`
   │

Aborting due to 6 previous errors
